--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -60,13 +60,14 @@ TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
 #-------------------------------------------------------------------------------
 #	DEFINE INSTALL FOLDERS
 #-------------------------------------------------------------------------------
-INSTALL(TARGETS ${PROJ_NAME}
-    RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Debug
-    ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug
-    LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug
-    CONFIGURATIONS Debug)
-INSTALL(TARGETS ${PROJ_NAME}
-    RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Release
-    ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release
-    LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release
-    CONFIGURATIONS Release)
+IF(CMAKE_BUILD_TYPE MATCHES "Release")
+    INSTALL(TARGETS ${PROJ_NAME}
+        RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Release/
+        LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release/
+        CONFIGURATIONS Release)
+ELSE(CMAKE_BUILD_TYPE MATCHES "Release")
+    INSTALL(TARGETS ${PROJ_NAME}
+        RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Debug/
+        LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug/
+        CONFIGURATIONS Debug)
+ENDIF(CMAKE_BUILD_TYPE MATCHES "Release")
