--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,11 +91,13 @@ set_target_properties(${PROJ_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 IF(CMAKE_BUILD_TYPE MATCHES "Release")
     INSTALL(TARGETS ${PROJ_NAME}
         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Release/
+	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release/
         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release/
         CONFIGURATIONS Release)
 ELSE(CMAKE_BUILD_TYPE MATCHES "Release")
     INSTALL(TARGETS ${PROJ_NAME}
         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Debug/
+	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug/
         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug/
         CONFIGURATIONS Debug)
 ENDIF(CMAKE_BUILD_TYPE MATCHES "Release")
