--- a/src/audio/CMakeLists.txt
+++ b/src/audio/CMakeLists.txt
@@ -63,11 +63,13 @@ TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
 IF(CMAKE_BUILD_TYPE MATCHES "Release")
     INSTALL(TARGETS ${PROJ_NAME}
         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Release/
+	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release/
         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Release/
         CONFIGURATIONS Release)
 ELSE(CMAKE_BUILD_TYPE MATCHES "Release")
     INSTALL(TARGETS ${PROJ_NAME}
         RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/Debug/
+	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug/
         LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib/Debug/
         CONFIGURATIONS Debug)
 ENDIF(CMAKE_BUILD_TYPE MATCHES "Release")
